// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunTaskButton should render Run task again 1`] = `
<DocumentFragment>
  <button
    aria-label="taska-run-task-button"
    class="pf-v6-c-button pf-m-primary"
    data-ouia-component-id="OUIA-Generated-Button-primary-2"
    data-ouia-component-type="PF6/Button"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-button__text"
    >
      Run task again
    </span>
  </button>
</DocumentFragment>
`;

exports[`RunTaskButton should render correctly 1`] = `
<DocumentFragment>
  <button
    aria-label="taska-run-task-button"
    class="pf-v6-c-button pf-m-primary"
    data-ouia-component-id="OUIA-Generated-Button-primary-1"
    data-ouia-component-type="PF6/Button"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-button__text"
    >
      Select systems
    </span>
  </button>
</DocumentFragment>
`;
